# Polestar_2_MQTT_Docker

./: .env.example  .env_local.example  .gitignore  AGENTS.md  Dockerfile  Node-RED_interface.json  Polestar_2_MQTT.py  README.md  Synology-howto.md  TASKS.md  docker-compose_example.yml  graphql_schema.gql  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_local.sh  run_tests.sh
.github/: dependabot.yml
.github/workflows/: docker-image.yml  keep-github-actions-alive.yml  linter.yml  python-tests.yml
.github/workflows /: linter.yml
doc/: README.md  architecture.md  operations.md
local-files/: graphql_queries.py_sample
polestar2MqttDocker/: main.py
src/: Polestar_2_MQTT.py  auth.py  graphql_queries.py
tests/: conftest.py  test_auth.py  test_graphql_queries.py  test_polestar_api.py  test_publishers.py
